# school-erp

./: .env.example  .gitignore  README.md  build.py  build_containers.py  docker-compose.yml  force_schema.py  package-lock.json  patch_crypto.py  patch_login_ts.py  patch_node_version.py  patch_ports.py  resolve_cluster_state.py  seed_container.py  shield.py  vercel.json
backend/: .env.example  Dockerfile  align_imports.py  bind_telemetry_hooks.py  build_academic_models.py  build_auth.py  build_relational_api.py  build_relations.py  build_school_admin_api.py  build_session.py  build_students_api.py  build_telemetry.py  build_tenant_api.py  check_user_model.py  docker-compose.yml  execute_ddl.py  fix.py  fix_algorithm.py  fix_args.py  fix_auth_query.py  fix_cors.py  fix_expiry.py  fix_refresh.py  fix_schema.py  fix_seed.py  fix_tenant_filename.py  fix_token_schema.py  fix_tz.py  force_auth_endpoint.py  force_auth_override.py  force_enrollment.py  force_jwt.py  force_relations_db.py  local_force_schema.py  local_seed.py  main.py  patch_academic_get.py  patch_academic_models.py  patch_algorithm.py  patch_attendance_api.py  (+42 more)
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: expire_roles.py  migration_preflight.py  seed.py  seed_subscriptions.py  staging_smoke.py  sync_role_templates.py
backend/tests/: test_academic_admin_model.py  test_access_control.py  test_billing_providers.py  test_migration_preflight.py  test_role_model.py  test_role_templates.py  test_school_services_model.py  test_subscription_model.py  test_subscriptions.py
frontend/: 123.PY  (+27 more)
(+93 files in other folders)
