[project]
name = "school-erp-backend"
version = "1.2.0"
description = "Multi-tenant School ERP FastAPI service"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.116,<1",
    "uvicorn[standard]>=0.35,<1",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "email-validator>=2.2,<3",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.16,<2",
    "bcrypt>=4.3,<5",
    "python-jose[cryptography]>=3.5,<4",
    "redis>=6.2,<7",
    "python-multipart>=0.0.20,<1",
]

[tool.vercel]
entrypoint = "main:app"
